# karakuri-rust

./: README.md
.github/workflows/: rust.yml
karakuri/: Cargo.toml
karakuri/src/: components.rs  engine.rs  entity.rs  lib.rs  logger.rs  scene.rs  toy.rs  utils.rs
karakuri/src/components/: name.rs  rigid_body.rs  transform.rs
karakuri/src/engine/: sdl_fps_controller.rs  sdl_input_processor.rs  sdl_renderer.rs
karakuri/src/math/: vector2.rs  vector2_test.rs
karakuri/src/scene/: scene_objects.rs
sandbox/src/: main.rs
