[package]
name = "karakuri"
version = "0.0.0"
edition = "2021"
publish = true
description = "2D game engine"
homepage = "https://github.com/IrvingWash/karakuri-rust"
repository = "https://github.com/IrvingWash/karakuri-rust.git"
readme = "../README.md"
documentation = "https://github.com/IrvingWash/karakuri-rust"
license = "MIT"
authors = ["WI"]

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["gfx", "image"]
